# vafr_lab1_ws

./: .gitignore  readme.md
src/lab1/: package.xml  setup.py
src/lab1/lab1/: calibrate.py  calibration_data.npz  edge_detector.py  line_follower.py  utils.py  visualize.py
